--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
     <title>Elite Heroes n Villains Gaming Club</title>
-    <link href="https://fonts.googleapis.com/css2?family=Shizuru&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&display=swap" rel="stylesheet">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
@@ -21,10 +21,10 @@
 
       <!-- /.HEADER -->
       <header class="header" id="header">
-        <div class="logo">Elite Gaming Club</div>
         <div class="burger" id="burger">
           <div class="burger_items"></div>
         </div>
+        <div class="logo">Elite Gaming Club</div>
       </header>
       <!-- /.HEADER -->
 
