--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Elite Heroes n Villains Gaming Club</title>
     <link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&display=swap" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
@@ -20,7 +21,7 @@
     <div class="intro">
 
       <!-- /.HEADER -->
-      <header class="header" id="header">
+      <header class="header" id="header" data-aos="fade-down">
         <div class="burger" id="burger">
           <div class="burger_items"></div>
         </div>
@@ -42,9 +43,22 @@
     </div>
     <!-- /.INTRO -->
 
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
 
-
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/nft.js"></script>
 
   </body>
