--- a/index.html
+++ b/index.html
@@ -25,11 +25,9 @@
         <div class="burger" id="burger">
           <div class="burger_items"></div>
         </div>
-        <div class="logo">Elite Gaming Club</div>
-      </header>
-      <!-- /.HEADER -->
+        <a href="#" class="logo">Elite Gaming Club</a>
 
-      <!-- /.NAV -->
+        <!-- /.NAV -->
       <nav class="nav" id="nav">
         <a href="#" class="nav_links">About us</a>
         <a href="#" class="nav_links">Universe</a>
@@ -39,6 +37,10 @@
         <a href="#" class="nav_links">FAQ</a>
       </nav>
       <!-- /.NAV -->
+      </header>
+      <!-- /.HEADER -->
+
+
 
     </div>
     <!-- /.INTRO -->
