--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
     <title>Elite Heroes n Villains Gaming Club</title>
-    <link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&display=swap" rel="stylesheet">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Frijole&family=Thasadith:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
@@ -25,7 +24,7 @@
         <div class="burger" id="burger">
           <div class="burger_items"></div>
         </div>
-        <a href="#" class="logo">Elite Gaming Club</a>
+        <a href="#" class="logo">E G C</a>
 
         <!-- /.NAV -->
       <nav class="nav" id="nav">
@@ -39,6 +38,15 @@
       <!-- /.NAV -->
       </header>
       <!-- /.HEADER -->
+
+      <div class="intro_content">
+        <h1 class="intro_title">Elite Gaming Club</h1>
+        <a href="#" class="intro_button">Whatever</a>
+      </div>
+
+      <div class="up_down_animation">
+        <div class="circle"></div>
+      </div>
 
 
 
