--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
       <!-- /.HEADER -->
 
       <div class="intro_content">
-        <h1 class="intro_title">Elite Gaming Club</h1>
-        <a href="#" class="intro_button">Whatever</a>
+        <h1 class="intro_title second_anim" data-aos="fade-zoom-in" data-aos-delay="1000">Elite Gaming Club</h1>
+        <a href="#" class="intro_button" data-aos="fade-zoom-in" data-aos-delay="1000">Whatever</a>
       </div>
 
-      <div class="up_down_animation">
+      <div class="up_down_animation" data-aos="fade-down">
         <div class="circle"></div>
       </div>
 
