--- a/index.html
+++ b/index.html
@@ -40,33 +40,41 @@
       <!-- /.HEADER -->
 
       <div class="intro_content">
-        <h1 class="intro_title second_anim" data-aos="fade-zoom-in" data-aos-delay="1000">Elite Gaming Club</h1>
+        <h1 class="intro_title" data-aos="fade-zoom-in" data-aos-delay="1000">Elite Gaming Club</h1>
         <a href="#" class="intro_button" data-aos="fade-zoom-in" data-aos-delay="1000">Whatever</a>
         <div class="up_down_animation" data-aos="fade-zoom-in" data-aos-delay="1500">
         <div class="circle"></div>
       </div>
       </div>
 
-
-
-
-
     </div>
     <!-- /.INTRO -->
 
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
+
+
+
+    <!-- /.ABOUT_US -->
+    <div class="about_us">
+      <div class="card_image">
+        <img src="img/card_img/1.jpeg" alt="">
+      </div>
+
+      <div class="about_us_content">
+        <h3 class="title">ABOUT US</h3>
+        <p class="subtitle">7,777 UNIQUE SPACE WARRIORS</p>
+        <p class="text">The SpaceWarriors club is a collection of 7,777 unique 3D NFTs, designed on Unreal Engine 5 stored as ERC-721 on the Ethereum blockchain and hosted on IPFS.Space Warriors Club is the first community-built video game.</p>
+        <p class="text">Owning a Space Warrior will grant you voting rights to shape the Space Warriors' Game using a DAO. Become part of an exclusive community and discover a new World rich in benefits and utilities.</p>
+        <a href="#" class="about_us_link">BECOME A WARRIOR AND JOIN OUR DISCORD NOW!</a>
+      </div>
+
+      <div></div>
+    </div>
+    <!-- /.ABOUT_US -->
+
+
+
+
+
 
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
