--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
 
     <!-- /.ABOUT_US -->
     <div class="about_us">
-      <div class="card_image">
+      <div class="card_image" data-aos="fade-zoom-in" data-aos-delay="1000">
         <img src="img/card_img/1.jpeg" alt="">
       </div>
 
-      <div class="about_us_content">
+      <div class="about_us_content" data-aos="fade-zoom-in" data-aos-delay="500">
         <h3 class="title">ABOUT US</h3>
         <p class="subtitle">7,777 UNIQUE SPACE WARRIORS</p>
         <p class="text">The SpaceWarriors club is a collection of 7,777 unique 3D NFTs, designed on Unreal Engine 5 stored as ERC-721 on the Ethereum blockchain and hosted on IPFS.Space Warriors Club is the first community-built video game.</p>
