--- a/index.html
+++ b/index.html
@@ -64,12 +64,29 @@
         <p class="subtitle">7,777 UNIQUE SPACE WARRIORS</p>
         <p class="text">The SpaceWarriors club is a collection of 7,777 unique 3D NFTs, designed on Unreal Engine 5 stored as ERC-721 on the Ethereum blockchain and hosted on IPFS.Space Warriors Club is the first community-built video game.</p>
         <p class="text">Owning a Space Warrior will grant you voting rights to shape the Space Warriors' Game using a DAO. Become part of an exclusive community and discover a new World rich in benefits and utilities.</p>
-        <a href="#" class="about_us_link">BECOME A WARRIOR AND JOIN OUR DISCORD NOW!</a>
+        <a href="#" class="link">BECOME A WARRIOR AND JOIN OUR DISCORD NOW!</a>
       </div>
 
       <div></div>
     </div>
     <!-- /.ABOUT_US -->
+
+
+
+
+    <!-- /.UNIVERSE -->
+    <div class="universe">
+      <div class="universe_content" data-aos="fade-zoom-in" data-aos-delay="500">
+        <h3 class="title">UNIVERSE</h3>
+        <p class="subtitle">Through danger comes solidarity and through solidarity comes victory- They say</p>
+        <p class="text">Deep in space, far from mankind, life prospers. But not life as we know it, a world populated by sentient robotic warriors. For thousands of years, they have been waging ruthless wars on spaceships and land driven by an insatiable appetite for domination, power and honor.</p>
+        <p class="text">Only one day, Strangers emerged, bringing destruction and annihilation to their Galaxy. Facing this dark threat, the warriors joined forces and united as one brotherhood, one unstoppable Army. Bound to fight for their survival, they vowed to avenge their fallen brothers.</p>
+        <p class="text">This cannot and will not be the end! An epic battle is coming.</p>
+        <p class="text">Only 7,777 of the bravest warriors survived.</p>
+        <a href="#" class="link universe_link">Become a warrior and join your army !</a>
+      </div>
+    </div>
+    <!-- /.UNIVERSE -->
 
 
 
