--- a/index.html
+++ b/index.html
@@ -91,6 +91,26 @@
 
 
 
+    <!-- /.WAR_HEROES -->
+    <div class="war_heroes">
+      <div class="war_heroes_content">
+        <h3 class="title" data-aos="fade-zoom-in" data-aos-delay="500">WAR HEROES</h3>
+        <p class="text" data-aos="fade-zoom-in" data-aos-delay="500">The War Heroes are 5 of the most feared and respected warriors. They are The Legends of each faction.</p>
+        <p class="text" data-aos="fade-zoom-in" data-aos-delay="500">The war heroes are part of the drop and can be minted by anyone. Only chance will decide who mints one.Once all the SpaceWarriors are minted, The Heroes will be granted the ancient chest.</p>
+        <p class="text" data-aos="fade-zoom-in" data-aos-delay="500">The war heroes are part of the drop and can be minted by anyone. Only chance will decide who mints one.Once all the SpaceWarriors are minted, The Heroes will be granted the ancient chest.</p>
+        <p class="text" data-aos="fade-zoom-in" data-aos-delay="500">Today, it contains a prize valued at $100,000 that will be split amongst the heroes.</p>
+      </div>
+
+      <div class="war_heroes_image" data-aos="fade-zoom-in" data-aos-delay="500">
+        <img src="img/card_img/2.jpeg" alt="">
+      </div>
+    </div>
+    <!-- /.WAR_HEROES -->
+
+
+
+
+
 
 
 
