--- a/index.html
+++ b/index.html
@@ -21,21 +21,24 @@
 
       <!-- /.HEADER -->
       <header class="header" id="header" data-aos="fade-down">
-        <div class="burger" id="burger">
-          <div class="burger_items"></div>
-        </div>
-        <a href="#" class="logo">E G C</a>
+        <div class="header_content">
+          <div class="burger" id="burger">
+            <div class="burger_items"></div>
+          </div>
+          <a href="#" class="logo">E G C</a>
 
-        <!-- /.NAV -->
-      <nav class="nav" id="nav">
-        <a href="#" class="nav_links">About us</a>
-        <a href="#" class="nav_links">Universe</a>
-        <a href="#" class="nav_links">Factions</a>
-        <a href="#" class="nav_links">War heroes</a>
-        <a href="#" class="nav_links">Team</a>
-        <a href="#" class="nav_links">FAQ</a>
-      </nav>
-      <!-- /.NAV -->
+          <!-- /.NAV -->
+          <nav class="nav" id="nav">
+            <a href="#" class="nav_links">About us</a>
+            <a href="#" class="nav_links">Universe</a>
+            <a href="#" class="nav_links">Factions</a>
+            <a href="#" class="nav_links">War heroes</a>
+            <a href="#" class="nav_links">Team</a>
+            <a href="#" class="nav_links">FAQ</a>
+          </nav>
+          <!-- /.NAV -->
+        </div>
+
       </header>
       <!-- /.HEADER -->
 
@@ -110,11 +113,34 @@
 
 
 
+    <!-- /.FOOTER -->
+    <div class="footer">
+      <div class="footer_content">
+        <div class="footer_items">
+          <h3 class="title">Elite Gaming Club</h3>
+          <p class="text">© 2021 SpaceWarriors Club. All rights reserved.</p>
+        </div>
+        <div class="footer_items">
+          <p class="subtitle">JOIN THE BROTHERHOOD</p>
+          <div class="footer_icons_block">
+            <i class="fa-brands fa-telegram footer_icon"></i>
+            <i class="fa-brands fa-instagram-square footer_icon"></i>
+            <i class="fa-brands fa-facebook-square footer_icon"></i>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- /.FOOTER -->
 
 
 
 
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+
+
+
+
+    <script src="https://kit.fontawesome.com/388be60fe9.js" crossorigin="anonymous"></script>    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="js/nft.js"></script>
 
   </body>
