--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
     <!-- /.FOOTER -->
     <div class="footer">
-      <div class="footer_content">
+      <div class="footer_content" data-aos="fade-up" data-aos-delay="500">
         <div class="footer_items">
           <h3 class="title footer_title">Elite Gaming Club</h3>
           <p class="text footer_text">© 2021 SpaceWarriors Club. All rights reserved.</p>
@@ -131,6 +131,8 @@
       </div>
     </div>
     <!-- /.FOOTER -->
+
+
 
 
 
