--- a/index.html
+++ b/index.html
@@ -94,6 +94,98 @@
 
 
 
+    <!-- /.UNIVERSE -->
+    <div class="factions">
+      <div class="factions_content">
+        <div class="factions_items factions_items_icons">
+          <div class="factions_icons_block">
+            <i class="fa-solid fa-dragon factions_icons"></i>
+          </div>
+          <div class="factions_icons_block">
+            <i class="fa-solid fa-dragon factions_icons"></i>
+          </div>
+          <div class="factions_icons_block">
+            <i class="fa-solid fa-dragon factions_icons"></i>
+          </div>
+          <div class="factions_icons_block">
+            <i class="fa-solid fa-dragon factions_icons"></i>
+          </div>
+          <div class="factions_icons_block">
+            <i class="fa-solid fa-dragon factions_icons"></i>
+          </div>
+        </div>
+        <div class="factions_items factions_items_content">
+          <div class="factions_info active">
+            <h3 class="title">ROYONS</h3>
+            <p class="text factions_text"><b><i>They are regarded as superior and majestic.</i></b><br>As the noble faction, the Royons bring light wherever they go. Their rank in society is represented by the halo above their heads.<br> They fight with their minds, not their fists.<br> They are the <b><i>finest strategists</i></b> with a strong capacity to lead. Thanks to their advanced technology, they have built majestic and technologically advanced cities. Their self-confidence has never been a burden but a strength used to great effect. They get what they want.</p>
+            <div class="factions_stats">
+              <div class="factions_stats_items">TRAITS<br> <span>STRATEGY</span></div>
+              <div class="factions_stats_items">UNITS<br> <span>777</span></div>
+              <div class="factions_stats_items">RARITY<br> <span>10%</span></div>
+            </div>
+          </div>
+          <div class="factions_info">
+            <h3 class="title">FLASHARS</h3>
+            <p class="text factions_text"><b><i>They are the fastest warriors.</i></b><br>Due to the strong winds that prevail on their planet, the Flashars have developed <b><i>extreme agility and speed.</i></b> A legend says that they can reach the speed of light. A speed that is sometimes hard to master.<br>They rarely travel alone. That's why they usually fight in packs of flashars known as flashgang.</p>
+            <div class="factions_stats">
+              <div class="factions_stats_items">TRAITS<br> <span>SPEED</span></div>
+              <div class="factions_stats_items">UNITS<br> <span>1750</span></div>
+              <div class="factions_stats_items">RARITY<br> <span>22.5%</span></div>
+            </div>
+          </div>
+          <div class="factions_info">
+            <h3 class="title">AN'HEK</h3>
+            <p class="text factions_text"><b><i>Their strength and endurance have no equal.</i></b><br>Coming from a desert planet, An'heks can spend days wandering in the dry wilderness. This has pushed their <b><i>tenacity</i></b> and <b><i>durability</i></b> to the extreme. Today, they are viewed as the toughest warriors of all<br>They are known to be solitary. This can be explained by the strength of their advanced self-defense capabilities.</p>
+            <div class="factions_stats">
+              <div class="factions_stats_items">TRAITS<br> <span>STRENGTH</span></div>
+              <div class="factions_stats_items">UNITS<br> <span>1750</span></div>
+              <div class="factions_stats_items">RARITY<br> <span>22.5%</span></div>
+            </div>
+          </div>
+          <div class="factions_info">
+            <h3 class="title">FEDELIONS</h3>
+            <p class="text factions_text"><b><i>TThey are driven by discipline and respect.</i></b><br>For generations, they have been perfecting the art and <b><i>techniques of combat.</i></b> Today their fighting style is absolute and <b><i>mortal</i></b>. Their warrior fellowship code means they fight to the death and honor is everything. Prior to the great union, they despised the Oblivions because of their difference in values and principles.<br>Their antennas denote power and rank. The greater they are, the more respect they’ve gained</p>
+            <div class="factions_stats">
+              <div class="factions_stats_items">TRAITS<br> <span>ALL-ROUNDER</span></div>
+              <div class="factions_stats_items">UNITS<br> <span>1750</span></div>
+              <div class="factions_stats_items">RARITY<br> <span>22.5%</span></div>
+            </div>
+          </div>
+          <div class="factions_info">
+            <h3 class="title">OBLIVIONS</h3>
+            <p class="text factions_text"><b><i>Masters in the art of stealth.</i></b><br>A forgotten faction, they are driven by <b><i>discretion</i></b>. Their deadly one-shot accuracy can send their enemies to hell.<br>Their evolution has taken place in a dark and hostile environment forcing them to move silently and stealthily.<br>Despite their mischievous looks, some say that they have feelings. This remains to be proven though.</p>
+            <div class="factions_stats">
+              <div class="factions_stats_items">TRAITS<br> <span>STRATEGY</span></div>
+              <div class="factions_stats_items">UNITS<br> <span>777</span></div>
+              <div class="factions_stats_items">RARITY<br> <span>10%</span></div>
+            </div>
+          </div>
+          <a href="#" class="link factions_link">JOIN OUR DISCORD</a>
+        </div>
+        <div class="factions_items">
+          <div class="factions_image active">
+            <img src="img/factions/1.jpeg" alt="">
+          </div>
+          <div class="factions_image">
+            <img src="img/factions/2.jpeg" alt="">
+          </div>
+          <div class="factions_image">
+            <img src="img/factions/3.jpeg" alt="">
+          </div>
+          <div class="factions_image">
+            <img src="img/factions/4.jpeg" alt="">
+          </div>
+          <div class="factions_image">
+            <img src="img/factions/5.jpeg" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- /.UNIVERSE -->
+
+
+
+
     <!-- /.WAR_HEROES -->
     <div class="war_heroes">
       <div class="war_heroes_content">
