--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     <!-- /.UNIVERSE -->
     <div class="factions">
       <div class="factions_content">
-        <div class="factions_items factions_items_icons">
+        <div class="factions_items factions_items_icons" data-aos="fade-zoom-in" data-aos-delay="500">
           <div class="factions_icons_block">
             <i class="fa-solid fa-dragon factions_icons"></i>
           </div>
@@ -114,7 +114,7 @@
             <i class="fa-solid fa-dragon factions_icons"></i>
           </div>
         </div>
-        <div class="factions_items factions_items_content">
+        <div class="factions_items factions_items_content" data-aos="fade-zoom-in" data-aos-delay="500">
           <div class="factions_info active">
             <h3 class="title">ROYONS</h3>
             <p class="text factions_text"><b><i>They are regarded as superior and majestic.</i></b><br>As the noble faction, the Royons bring light wherever they go. Their rank in society is represented by the halo above their heads.<br> They fight with their minds, not their fists.<br> They are the <b><i>finest strategists</i></b> with a strong capacity to lead. Thanks to their advanced technology, they have built majestic and technologically advanced cities. Their self-confidence has never been a burden but a strength used to great effect. They get what they want.</p>
@@ -160,9 +160,9 @@
               <div class="factions_stats_items">RARITY<br> <span>10%</span></div>
             </div>
           </div>
-          <a href="#" class="link factions_link">JOIN OUR DISCORD</a>
+          <a href="#" class="link factions_link" data-aos="fade-zoom-in" data-aos-delay="500">JOIN OUR DISCORD</a>
         </div>
-        <div class="factions_items">
+        <div class="factions_items" data-aos="fade-zoom-in" data-aos-delay="500">
           <div class="factions_image active">
             <img src="img/factions/1.jpeg" alt="">
           </div>
