--- a/index.html
+++ b/index.html
@@ -155,9 +155,9 @@
             <h3 class="title">OBLIVIONS</h3>
             <p class="text factions_text"><b><i>Masters in the art of stealth.</i></b><br>A forgotten faction, they are driven by <b><i>discretion</i></b>. Their deadly one-shot accuracy can send their enemies to hell.<br>Their evolution has taken place in a dark and hostile environment forcing them to move silently and stealthily.<br>Despite their mischievous looks, some say that they have feelings. This remains to be proven though.</p>
             <div class="factions_stats">
-              <div class="factions_stats_items">TRAITS<br> <span>STRATEGY</span></div>
-              <div class="factions_stats_items">UNITS<br> <span>777</span></div>
-              <div class="factions_stats_items">RARITY<br> <span>10%</span></div>
+              <div class="factions_stats_items">TRAITS<br> <span>STEALTH</span></div>
+              <div class="factions_stats_items">UNITS<br> <span>1750</span></div>
+              <div class="factions_stats_items">RARITY<br> <span>22.5%</span></div>
             </div>
           </div>
           <a href="#" class="link factions_link" data-aos="fade-zoom-in" data-aos-delay="500">JOIN OUR DISCORD</a>
@@ -218,6 +218,7 @@
             <a href="#" class="footer_icon"><i class="fa-brands fa-telegram"></i></a>
             <a href="#" class="footer_icon"><i class="fa-brands fa-instagram-square"></i></a>
             <a href="#" class="footer_icon"><i class="fa-brands fa-facebook-square"></i></a>
+            <a href="#" class="footer_icon"><i class="fa-brands fa-discord"></i></a>
           </div>
         </div>
       </div>
