--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         <p class="text" data-aos="fade-zoom-in" data-aos-delay="300">The War Heroes are 5 of the most feared and respected warriors. They are The Legends of each faction.</p>
         <p class="text" data-aos="fade-zoom-in" data-aos-delay="300">The war heroes are part of the drop and can be minted by anyone. Only chance will decide who mints one.Once all the SpaceWarriors are minted, The Heroes will be granted the ancient chest.</p>
         <p class="text" data-aos="fade-zoom-in" data-aos-delay="300">The war heroes are part of the drop and can be minted by anyone. Only chance will decide who mints one.Once all the SpaceWarriors are minted, The Heroes will be granted the ancient chest.</p>
-        <p class="text" data-aos="fade-zoom-in" data-aos-delay="300">Today, it contains a prize valued at $100,000 that will be split amongst the heroes.</p>
+        <p class="text" data-aos="fade-zoom-in" data-aos-delay="300">Today, it contains a prize valued at <span> $100,000 </span> that will be split amongst the heroes.</p>
       </div>
 
       <div class="war_heroes_image" data-aos="fade-zoom-in" data-aos-delay="300">
@@ -201,6 +201,110 @@
       </div>
     </div>
     <!-- /.WAR_HEROES -->
+
+
+
+
+    <!-- /.ROADMAP -->
+    <div class="roadmap">
+      <div class="roadmap_content" data-aos="fade-zoom-in" data-aos-delay="300">
+        <div class="roadmap_head">
+          <div class="roadmap_head_title active">ROADMAP<br>LAUNCH</div>
+          <div class="roadmap_head_title">ROADMAP<br>DEVELOPMENT</div>
+        </div>
+        <div class="roadmap_items active">
+          <p class="text roadmap_items_text">We want to ensure your NFT investment is highly profitable. To do, so we elaborated a strong roadmap, rich in value and utility. At the end of it, is the release of the first-ever video game, built by you, the community.</p>
+          <div class="launch_content">
+            <div class="launch_head">0%</div>
+            <div class="launch_body">
+              <h3 class="subtitle roadmap_items_subtitle">WELCOME TO THE ARMY</h3>
+              <span>Est. Date: Early Q1 2022</span>
+              <p class="text roadmap_items_text">From all corners of the Galaxy, the last Space Warriors are regrouping to form the ultimate stronghold. They have taken shelter on Discord and The Army is assembling now.</p>
+            </div>
+          </div>
+          <div class="launch_content">
+            <div class="launch_head">20%</div>
+            <div class="launch_body">
+              <h3 class="subtitle roadmap_items_subtitle">AS AN ARMY, WE MOVE AS ONE</h3>
+              <span>Est. Date: Early Q1 2022</span>
+              <p class="text roadmap_items_text">Launch of the Space Warriors GAME DAO: Implementation of voting and suggestion systems.<br>Warriors will have the right to participate in the decisions that will shape the video game: from game type to platform and much more.<br>-All the while, we’ll be working on developing the first community-built video game, and this process will be ongoing until completion.-</p>
+            </div>
+          </div>
+          <div class="launch_content">
+            <div class="launch_head">40%</div>
+            <div class="launch_body">
+              <h3 class="subtitle roadmap_items_subtitle">METAVERSE TAKE OVER</h3>
+              <span>Est. Date: Early Q1 2022</span>
+              <p class="text roadmap_items_text">Collectively, we will elect the Metaverse upon which the Space Warriors Club HQ will be built, and we’ll buy a piece of that land.</p>
+            </div>
+          </div>
+          <div class="launch_content">
+            <div class="launch_head">60%</div>
+            <div class="launch_body">
+              <h3 class="subtitle roadmap_items_subtitle">TIME TO SHARE THE LOOT</h3>
+              <span>Est. Date: Early Q1 2022</span>
+              <p class="text roadmap_items_text">The Army wallet will be funded with 5% of all secondary sales royalties.<br>This wallet will be dedicated to funding the Space Warriors’ Club activities.<br>These include building the metaverse, In Real Life events, conferences, and much more</p>
+            </div>
+          </div>
+          <div class="launch_content">
+            <div class="launch_head">70%</div>
+            <div class="launch_body">
+              <h3 class="subtitle roadmap_items_subtitle">HOP IN WARRIOR, WE’RE GOING FOR A RIDE!</h3>
+              <span>Date: Q1 2022</span>
+              <p class="text roadmap_items_text">The council will airdrop the spaceships of each faction to its most loyal warrior holders.</p>
+            </div>
+          </div>
+          <div class="launch_content">
+            <div class="launch_head">80%</div>
+            <div class="launch_body">
+              <h3 class="subtitle roadmap_items_subtitle">CHECK MY GALACTIC DRIP</h3>
+              <span>Date: Q2 2022</span>
+              <p class="text roadmap_items_text">The official Army merchandise will be released.<br>You will have access to goodies and a long-forgotten book, which is the last remaining archive of the Space Warriors' history.</p>
+            </div>
+          </div>
+          <div class="launch_content">
+            <div class="launch_head">90%</div>
+            <div class="launch_body">
+              <h3 class="subtitle roadmap_items_subtitle">DRINKS ON US BOIZ</h3>
+              <span>Date: Q3 2022</span>
+              <p class="text roadmap_items_text">Launch of the metaverse hangout.<br>Built on the metaverse chosen in step 2, the exclusive Space Warriors Club will finally become a place, and will officially exist in the metaverse, all warriors will be able to access it.<br>This virtual land will be a place of union and discussion. It will be used to announce future e-sport and gaming events and special giveaways.</p>
+            </div>
+          </div>
+          <div class="launch_content">
+            <div class="launch_head">100%</div>
+            <div class="launch_body">
+              <h3 class="subtitle roadmap_items_subtitle">TIME TO PLAY!</h3>
+              <span>Date: TBA</span>
+              <p class="text roadmap_items_text">The final goal of the Space Warriors Club: warriors will be able to experience their custom-built video game.<br>They will be able to compete in-game for rewards coming from the army wallet or to implement many other utilities, depending on what warriors decide.</p>
+            </div>
+          </div>
+        </div>
+
+
+
+        <div class="roadmap_items">
+          <p class="text roadmap_text">As the council our mission is to serve the Army and make it thrive. We want to ensure your investment is profitable. To do so, we will implement several post-launch strategies to increase the floor price.</p>
+          <span class="roadmap_span">Marketing plan</span>
+          <p class="text roadmap_text">After investing more than $200 000 in marketing launch campaigns, we will continue investing. A considerable amount of the royalties and sales will go towards Warriors awareness. We believe that future success depends on implementing successful marketing campaigns.</p>
+
+          <span class="roadmap_span">Worldwide events</span>
+          <p class="text roadmap_text">The most active members of the Army will be invited to worldwide events in the field of e-sport and gaming. This will give Warriors the opportunity to meet in real life and take full advantage of their utilities.</p>
+
+          <span class="roadmap_span">Metaverse presence</span>
+          <p class="text roadmap_text">We truly believe that the metaverse will be part of the future of humanity. As a metaverse-oriented project our presence there is one of our priorities. More than being present, we will expand SWC’s metaverse influence in the coming years.</p>
+
+          <span class="roadmap_span">Huge collaborations</span>
+          <p class="text roadmap_text">We will actively pursue collaborations with other projects and with influencers/speakers in the world of esports and gaming.</p>
+
+          <span class="roadmap_span">Annual rewards</span>
+          <p class="text roadmap_text">We highly value our Community and we want to show our gratitude. This is why Warriors will be rewarded through their Army commitments.</p>
+
+          <span class="roadmap_span">Unique Universe Experience</span>
+          <p class="text roadmap_text">For the first time, a community will have the opportunity to play in a videogame they shaped. Be the first to be part of this innovative experience.</p>
+        </div>
+      </div>
+    </div>
+    <!-- /.ROADMAP -->
 
 
 
