--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
           <div class="burger" id="burger">
             <div class="burger_items"></div>
           </div>
-          <a href="#" class="logo">E G C</a>
+          <a href="index.html" class="logo" data-goto=".intro">E G C</a>
 
           <!-- /.NAV -->
           <nav class="nav" id="nav">
-            <a href="#" class="nav_links">About us</a>
-            <a href="#" class="nav_links">Universe</a>
-            <a href="#" class="nav_links">Factions</a>
-            <a href="#" class="nav_links">War heroes</a>
-            <a href="#" class="nav_links">Team</a>
-            <a href="#" class="nav_links">FAQ</a>
+            <a href="#" class="nav_links" data-goto=".about_us">About us</a>
+            <a href="#" class="nav_links" data-goto=".universe">Universe</a>
+            <a href="#" class="nav_links" data-goto=".factions">Factions</a>
+            <a href="#" class="nav_links" data-goto=".war_heroes">War heroes</a>
+            <a href="#" class="nav_links" data-goto=".roadmap">Roadmap</a>
+            <a href="#" class="nav_links" data-goto=".faq">FAQ</a>
           </nav>
           <!-- /.NAV -->
         </div>
@@ -94,7 +94,7 @@
 
 
 
-    <!-- /.UNIVERSE -->
+    <!-- /.FACTIONS -->
     <div class="factions">
       <div class="factions_content">
         <div class="factions_items factions_items_icons" data-aos="fade-zoom-in" data-aos-delay="300">
@@ -181,7 +181,7 @@
         </div>
       </div>
     </div>
-    <!-- /.UNIVERSE -->
+    <!-- /.FACTIONS -->
 
 
 
