--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="hide_background" id="hide_background"></div>
 
     <!-- /.INTRO -->
-    <div class="intro">
+    <div class="intro" id="intro">
 
       <!-- /.HEADER -->
       <header class="header">
@@ -25,16 +25,16 @@
           <div class="burger" id="burger">
             <div class="burger_items"></div>
           </div>
-          <a href="index.html" class="logo" data-goto=".intro">E G C</a>
+          <a href="index.html" class="logo" data-scroll="#intro">E G C</a>
 
           <!-- /.NAV -->
           <nav class="nav" id="nav">
-            <a href="#" class="nav_links" data-goto=".about_us">About us</a>
-            <a href="#" class="nav_links" data-goto=".universe">Universe</a>
-            <a href="#" class="nav_links" data-goto=".factions">Factions</a>
-            <a href="#" class="nav_links" data-goto=".war_heroes">War heroes</a>
-            <a href="#" class="nav_links" data-goto=".roadmap">Roadmap</a>
-            <a href="#" class="nav_links" data-goto=".faq">FAQ</a>
+            <a href="#" class="nav_links" data-scroll="#about_us">About us</a>
+            <a href="#" class="nav_links" data-scroll="#universe">Universe</a>
+            <a href="#" class="nav_links" data-scroll="#factions">Factions</a>
+            <a href="#" class="nav_links" data-scroll="#war_heroes">War heroes</a>
+            <a href="#" class="nav_links" data-scroll="#roadmap">Roadmap</a>
+            <a href="#" class="nav_links" data-scroll="#faq">FAQ</a>
           </nav>
           <!-- /.NAV -->
         </div>
@@ -57,7 +57,7 @@
 
 
     <!-- /.ABOUT_US -->
-    <div class="about_us">
+    <div class="about_us" id="about_us">
       <div class="card_image" data-aos="fade-zoom-in" data-aos-delay="300">
         <img src="img/card_img/1.jpeg" alt="">
       </div>
@@ -78,7 +78,7 @@
 
 
     <!-- /.UNIVERSE -->
-    <div class="universe">
+    <div class="universe" id="universe">
       <div class="universe_content" data-aos="fade-zoom-in" data-aos-delay="300">
         <h3 class="title">UNIVERSE</h3>
         <p class="subtitle">Through danger comes solidarity and through solidarity comes victory- They say</p>
@@ -95,7 +95,7 @@
 
 
     <!-- /.FACTIONS -->
-    <div class="factions">
+    <div class="factions" id="factions">
       <div class="factions_content">
         <div class="factions_items factions_items_icons" data-aos="fade-zoom-in" data-aos-delay="300">
           <div class="factions_icons_block active">
@@ -187,7 +187,7 @@
 
 
     <!-- /.WAR_HEROES -->
-    <div class="war_heroes">
+    <div class="war_heroes" id="war_heroes">
       <div class="war_heroes_content">
         <h3 class="title" data-aos="fade-zoom-in" data-aos-delay="300">WAR HEROES</h3>
         <p class="text" data-aos="fade-zoom-in" data-aos-delay="300">The War Heroes are 5 of the most feared and respected warriors. They are The Legends of each faction.</p>
@@ -206,7 +206,7 @@
 
 
     <!-- /.ROADMAP -->
-    <div class="roadmap">
+    <div class="roadmap" id="roadmap">
       <div class="roadmap_content" data-aos="fade-zoom-in" data-aos-delay="300">
         <div class="roadmap_head">
           <div class="roadmap_head_title active">ROADMAP<br>LAUNCH</div>
@@ -310,7 +310,7 @@
 
 
     <!-- /.FAQ -->
-    <div class="faq">
+    <div class="faq" id="faq">
       <div class="faq_content">
         <div class="faq_items" data-aos="fade-zoom-in" data-aos-delay="300">
           <div class="subtitle faq_head_title">How do I become a SpaceWarrior?</div>
@@ -402,7 +402,7 @@
 
 
 
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://kit.fontawesome.com/5aeabf7845.js" crossorigin="anonymous"></script>
     <script src="js/nft.js"></script>
