--- a/index.html
+++ b/index.html
@@ -313,57 +313,57 @@
     <div class="section faq" id="faq">
       <div class="faq_content">
         <div class="faq_items" data-aos="fade-zoom-in" data-aos-delay="300">
-          <div class="subtitle faq_head_title">How do I become a SpaceWarrior?</div>
+          <div class="subtitle faq_head_title"><div class="faq_icon"></div>How do I become a SpaceWarrior?</div>
           <div class="text faq_body_text">You will be able to mint your SpaceWarrior at: <a href="#" class="faq_link">www.spacewarriorsclub.com</a><br>Only use the official links. We will never DM you links.</div>
         </div>
 
         <div class="faq_items" data-aos="fade-zoom-in" data-aos-delay="300">
-          <div class="subtitle faq_head_title">How much does a SW cost?</div>
+          <div class="subtitle faq_head_title"><div class="faq_icon"></div>How much does a SW cost?</div>
           <div class="text faq_body_text">The price is set at 0.2 ETH, however you should foresee a bit more for the gas fees.</div>
         </div>
 
         <div class="faq_items" data-aos="fade-zoom-in" data-aos-delay="300">
-          <div class="subtitle faq_head_title">Where can I view my NFTs?</div>
+          <div class="subtitle faq_head_title"><div class="faq_icon"></div>Where can I view my NFTs?</div>
           <div class="text faq_body_text">Once minted, you'll just need to simply login into your OpenSea account to view your NFTs.</div>
         </div>
 
         <div class="faq_items" data-aos="fade-zoom-in" data-aos-delay="300">
-          <div class="subtitle faq_head_title">Will there be a pre-sale?</div>
+          <div class="subtitle faq_head_title"><div class="faq_icon"></div>Will there be a pre-sale?</div>
           <div class="text faq_body_text">Yes, there will be pre-sales.<br>Spots are extremely limited, and only our whitelist members can join. To learn how to be part of our whitelist <a class="faq_link" href="#">please join our Discord !</a></div>
         </div>
 
         <div class="faq_items" data-aos="fade-zoom-in" data-aos-delay="300">
-          <div class="subtitle faq_head_title">When am I going to be able to mint my Space Warrior?</div>
+          <div class="subtitle faq_head_title"><div class="faq_icon"></div>When am I going to be able to mint my Space Warrior?</div>
           <div class="text faq_body_text">The raffle registration starts on the 24th at 6pm UTC.<br>The whitelist sales will occur on the 25th at 6pm UTC.<br>The raffle sale will occur on the 25th at 8pm UTC.</div>
         </div>
 
         <div class="faq_items" data-aos="fade-zoom-in" data-aos-delay="300">
-          <div class="subtitle faq_head_title">How can I use my SW?</div>
+          <div class="subtitle faq_head_title"><div class="faq_icon"></div>How can I use my SW?</div>
           <div class="text faq_body_text">You will be able to use your NFT as an avatar in the metaverse as well as to access the first community-built videogame.<br>Your NFT also grants you access to vote for the future of the Space Warriors game, a game that YOU will build.<br>These elements give real value to your NFT and your investment.</div>
         </div>
 
         <div class="faq_items" data-aos="fade-zoom-in" data-aos-delay="300">
-          <div class="subtitle faq_head_title">What is a DAO?</div>
+          <div class="subtitle faq_head_title"><div class="faq_icon"></div>What is a DAO?</div>
           <div class="text faq_body_text">A DAO is a Decentralised Autonomous Organisation serving a clearly defined function, a hierarchy-free governance system that empowers influence-free transactions, unbiased votes and more to be securely conducted.<br>DAOs enable a 100% transparent voting process in which anyone can access and review all vote data. In fact, as a proudly trustable venture, we actively encourage it!</div>
         </div>
 
         <div class="faq_items" data-aos="fade-zoom-in" data-aos-delay="300">
-          <div class="subtitle faq_head_title">How does Space Warrior Club use DAOs?</div>
+          <div class="subtitle faq_head_title"><div class="faq_icon"></div>How does Space Warrior Club use DAOs?</div>
           <div class="text faq_body_text">What is your strategy, warrior? The fate of our galaxy rests on your shoulders...<br>The Space Warriors Club uses a DAO structure to generate inputs from every community user in inspiring the trajectory of our community and game.<br>SWC DAO votes will be hosted on the Polygon Network, chosen for its effective harnessing of Ethereum Layer 2 technology and minimized gas fees for our community members.</div>
         </div>
 
         <div class="faq_items" data-aos="fade-zoom-in" data-aos-delay="300">
-          <div class="subtitle faq_head_title">Are there secondary sales royalties?</div>
+          <div class="subtitle faq_head_title"><div class="faq_icon"></div>Are there secondary sales royalties?</div>
           <div class="text faq_body_text">The royalties were fixed at 5% to fund the Space Warriors Club. We want to ensure the implementation of strong marketing campaigns and multiple events to strengthen the community, as well as ensure a high secondary market price. The fund collected will benefit the holders, the royalties can decrease over time.</div>
         </div>
 
         <div class="faq_items" data-aos="fade-zoom-in" data-aos-delay="300">
-          <div class="subtitle faq_head_title">What blockchain will you be using?</div>
+          <div class="subtitle faq_head_title"><div class="faq_icon"></div>What blockchain will you be using?</div>
           <div class="text faq_body_text">The Space Warriors will be hosted on the Ethereum blockchain.</div>
         </div>
 
         <div class="faq_items" data-aos="fade-zoom-in" data-aos-delay="300">
-          <div class="subtitle faq_head_title">Will there be giveaways?</div>
+          <div class="subtitle faq_head_title"><div class="faq_icon"></div>Will there be giveaways?</div>
           <div class="text faq_body_text">Yes, there will be giveaways! You can check out our giveaway channel on <a class="faq_link" href="#">Discord.</a></div>
         </div>
       </div>
