--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <p class="text">Only one day, Strangers emerged, bringing destruction and annihilation to their Galaxy. Facing this dark threat, the warriors joined forces and united as one brotherhood, one unstoppable Army. Bound to fight for their survival, they vowed to avenge their fallen brothers.</p>
         <p class="text">This cannot and will not be the end! An epic battle is coming.</p>
         <p class="text">Only 7,777 of the bravest warriors survived.</p>
-        <a href="#" class="link universe_link">Become a warrior and join your army !</a>
+        <a href="#" class="link universe_link">BECOME A WARRIOR AND JOIN YOUR ARMY!</a>
       </div>
     </div>
     <!-- /.UNIVERSE -->
